tetrate/tis0502/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-mtls-disabled
spec:
  validationFailureAction: Enforce
